agregado encabezado, introduccion , iconos y sesion

--- a/Tendencias.html
+++ b/Tendencias.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="estilo.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="tendencias.css">
     <title>
         Tendencias | INFOTEC
     </title>
-    <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
 </head>
+
 <body>
 
     <!--Barra de navegación-->
@@ -29,61 +30,55 @@
             </nav>
         </div>
     </header>
-
-    <!--Sección de contenido-->
-    <div class="container">
-        <div class="bloque">
-            <h1>
-                Realidad virtual y aumentada
-            </h1>
-            <img src="imagenes/realidad-virtual.jpg" class="imagen1">
-            <p>
-                Talkwalker y HubSpot realizaron un estudio sobre las tendencias en redes sociales de 2020 en el cual se dio a conocer, que las conversaciones sobre realidad aumentada y realidad virtual tuvieron 13,2 millones de interacciones en el primer trimestre de 2019 y el 5% de estas menciones fueron en torno al marketing.<br>
-                La realidad aumentada y la realidad virtual son los grandes desarrollos de la tecnología, siendo integradas a distintas aplicaciones e incluso a las redes sociales. Se espera que éstas sean una de las grandes tendencias en el 2020 para impulsar la experiencia del usuario y la gamificación. 
-                La función de la realidad aumentada será ayudar a aumentar la experiencia del usuario dentro de la tienda; mientras que la realidad virtual será fundamental para impulsarla en línea.
-            </p>  
-            <h3>
-                ¿En que se puede aplicar la realidad virtual y aumentada?
-            </h3>    
-            <p>   
-                <b>1.Videojuegos:<br></b>
-                Quizás donde más se haya avanzado en realidad aumentada. Todas las grandes empresas de este sector tienen ya potentes desarrollos y lanzamientos de videojuegos que combinan la realidad física con la virtual. Además, ofrecen múltiples posibilidades de personalización de cada juego.<br>
-                <b>2.Visión de Realidad Aumentada:<br></b>
-                Las Google Glass, las gafas HoloLens de Microsoft, y los cascos de realidad virtual de Samsung, HTC o Sony (además de proyectos que están preparando otras empresas como Facebook) utilizan ya la realidad aumentada. Estos desarrollos permiten al usuario sensaciones de tacto de objetos generados por ordenador dentro de su campo visual.
-                También ofrecen la posibilidad de interactuar en diferentes situaciones que mezclan lo material y lo artificial.<br>
-                <b>3.Moda:<br></b>
-                Un ámbito donde ya se usa con regularidad la realidad aumentada es la moda, por la posibilidad de probarte ropa virtualmente y ver cómo nos queda.
-                También hay ya dispositivos para realidad aumentada en el terreno de la óptica, para probarnos gafas, o del maquillaje.
-            </p>
-            <h1>
-                El internet de las cosas
-            </h1>
-            <img src="imagenes/imagen2.jpg" class="imagen2">  
-            <p>    
-                Es un concepto que se refiere a una interconexión digital de objetos cotidianos con internet.​​ 
-                Es, en definitiva, la conexión de internet más con objetos que con personas.​ También se suele conocer como internet de todas las cosas o internet en las cosas.
-            </p>
-            <h3>        
-                ¿Qué hace posible IoT?
-            </h3>  
-            <p>
-                IoT viene del inglés "<i>Internet Of Things</i>", es decir, "Internet de las cosas", pero ¿qué es exactamente?<br>
-                IoT depende de una serie integral de tecnologías como las interfaces de programación de aplicaciones (API) 
-                que conectan los dispositivos a internet. Otras tecnologías IoT clave son las herramientas de gestión de Big Data, las analíticas predictivas, la IA y 
-                machine learning, la nube y la identificación por radiofrecuencia (RFID).<br>
-                Automatización y control de procesos de producción: Se utilizan dispositivos IoT para mejorar la fabricación, la fiabilidad y la 
-                eficiencia de los productos obtenidos, así como para el seguimiento del producto en la fábrica.
-            </p>
-            <h3> 
-                ¿En que ambito se podria utilizar el internet de las cosas?
-            </h3>
-            <p>
-                <b>Automatización y control de procesos de producción:<br></b>
-                Se utilizan dispositivos IoT para mejorar la fabricación, la fiabilidad y la eficiencia de los productos obtenidos, así como para el seguimiento del producto en la fábrica.<br>
-                <b>Agricultura, ganadería y silvicultura:<br></b> Se usan dispositivos IoT para la automatización de tareas fundamentales en la agricultura y silvicultura como es la detección y control de plagas y enfermedades o la satisfacción de las necesidades de las plantas (abonado, riego automático, etc.), así como para la cosecha, indicando el momento óptimo de recolección. En el caso de los animales, sirven para su seguimiento biométrico y geolocalización, además de poder chequear el estado de salud del animal y sus necesidades (alimentación, retirada de abono, etc.).
-            </p>
+    <!-- Imagen Header -->
+    <figure class="img-header">
+        <div class="bienvenida">
+            <h2><b>"NUEVAS TENDENCIAS TECNOLOGICAS"</b>
+                <i class="fas fa-chalkboard-teacher"></i>
+            </h2>
         </div>
+    </figure>
+    <!-- Acerca de nosotros -->
+    <section class="about-us">
+        <div class="info">
+            <h3><b>INTRODUCCIÓN</b></h3>
+            <p>La generación de las nuevas tecnologías se plantea por incontables organizaciones, ya que las grandes empresas han ido evolucionando e incrementado presupuestos para sus proyectos y desarrollo de sus investigaciones, han obtenido ventajas competitivas en sus diferentes sectores.  
+            Las tecnologías modernas y las nuevas tecnologías emergentes se representan como una alternativa ante diferentes organizaciones para adecuarlas a sus procesos con la finalidad de mejorar e innovar nuevos productos y servicios. Cada día se generan ideas nuevas que generan un avance en la tecnología desde nuevo software, realidad aumentada, almacenamiento virtual, nuevas formas de ver internet, servicios multimedia, web semántica, dispositivos móviles, medios sociales (twitter, facebook, blogs, etc.). la inclusión de las tecnologías emergentes al entorno empresarial.  
+            </p>  
+            <div class="free-content">
+                <h4><b>TITULO</b></h4>
+                <div class="icons">
+                    <div>
+                        <div class="iconos"><span><i class="fas fa-robot" id="icono-html"></i></span></div>
+                        <h6 id="html">REALIDAD VIRTUAL Y AUMENTADA</h6>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut    
+                            itaque.</p>
+                    </div>
+
+                    <div>
+                        <div class="iconos"><span><i class="fas fa-broadcast-tower" id="icono-css"></i></i>
+                            </span></div>
+                        <h6 id="css">INTERNET DE LAS COSAS</h6>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
+                            itaque.</p>
+                    </div>
+
+        </div>
+
     </div> 
+    </section>
+    <!--Agregando scripts-->
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
+</body>
+
+
+
+
+
+
+
 
     <!--Pie de página-->
     <footer>
@@ -94,8 +89,10 @@
                         Información del grupo de trabajo
                     </h1>
                     <p>
-                        Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
-                        ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
+                    Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología
+                    en distintos
+                    ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo
+                    disfrutes.
                     </p>
                 </div>
                 <div class="colum2">
@@ -150,5 +147,14 @@
             <div class="copyright">© 2021 Todos los Derechos Reservados</div>
         </div>
     </footer>
+
+
+
+
+<!-- SCRIPTS-->
+<script src="scripts.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
+
 </html>
