Agregando un css Head_Pie de referencia

--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -9,6 +9,7 @@
         Desarrollo Web | INFOTEC
     </title>
     <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel="stylesheet" href="Head_Pie.css">
     <link rel=StyleSheet href="CSS/web.css" type="text/css">
     <link rel=StyleSheet href="CSS/secciones.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
