De index.html a Inicio.html

--- a/Redes-Sociales.html
+++ b/Redes-Sociales.html
@@ -27,7 +27,7 @@
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
                 <ul class="show">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Inicio.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
                     <li><a href="Tendencias.html">Tendencias</a></li>
@@ -64,23 +64,23 @@
             <h4><b>Title</b></h4>
             <div class="icons">
                 <div>
-                    <div class="iconos"><span><i class="fab fa-facebook" id="icono-html"></i></span></div>
-                    <h6 id="html">Facebook</h6>
+                    <div class="iconos"><span><i class="fab fa-facebook" id="icono-facebook"></i></span></div>
+                    <h6 id="face">Facebook</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
                 <div>
-                    <div class="iconos"><span><i class="fab fa-instagram" id="icono-css"></i>
+                    <div class="iconos"><span><i class="fab fa-instagram" id="icono-instagram"></i>
                         </span></div>
-                    <h6 id="css">Instagram</h6>
+                    <h6 id="insta">Instagram</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
                 <div>
-                    <div class="iconos"><span><i class="fab fa-linkedin-in" id="icono-javascript"></i></i></span></div>
-                    <h6 id="javascript">Linkedin</h6>
+                    <div class="iconos"><span><i class="fab fa-linkedin-in" id="icono-linkedin"></i></i></span></div>
+                    <h6 id="linkedin">Linkedin</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
