--- a/Inicio.html
+++ b/Inicio.html
@@ -21,7 +21,7 @@
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
                 <ul class="show">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Inicio.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
                     <li><a href="Tendencias.html">Tendencias</a></li>
