Arreglando ruta de imagenes y limpiando codigo

--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <script src="scripts.js"></script>
     <title>
         Desarrollo Web | INFOTEC
     </title>
+    <link rel="stylesheet" href="Head_Pie.css">
     <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
     <link rel=StyleSheet href="CSS/web.css" type="text/css">
     <link rel=StyleSheet href="CSS/secciones.css" type="text/css">
@@ -196,7 +198,6 @@
 
 
     <!-- SCRIPTS-->
-    <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
