arreglando el script de la barra de navegación

--- a/Inicio.html
+++ b/Inicio.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
     <title>
         INFOTEC | Sitio Oficial
     </title>
     <link rel="icon"  type="imagenes/jpg" href="imagenes/logo.jpg">
 </head>
 <body>
+
     <!--Barra de navegación-->
+
     <header class="header">
         <div class="container logo-nav-container">
             <img src="imagenes/logo.jpg" class="logo">
@@ -30,6 +30,7 @@
     </header>
 
     <!--Apartado principal-->
+
    <div class="container"> 
        <header class="showcase">
            <h2>Entérate de lo último en técnología</h2>
@@ -40,6 +41,7 @@
        </header>
   
     <!--Sección de resumenes del contenido-->
+
     <div class="news-cards">
         <div>
             <img src="imagenes/news1.jpg"/>
@@ -69,6 +71,7 @@
     </div>
 
     <!--Pie de página-->
+
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -133,5 +136,10 @@
             <div class="copyright">© 2021 Todos los Derechos Reservados</div>
         </div>
     </footer>
+    
+    <!-- SCRIPTS-->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
