--- a/Tendencias.html
+++ b/Tendencias.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="tendencias.css">
+    <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="Head_Pie.css">
     <title>
         Tendencias | INFOTEC
     </title>
-    <link rel="icon" type="imagenes/jpg" href="imagenes/logo.jpg">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-
 </head>
 
 <body>
 
     <!--Barra de navegación-->
+
     <header class="header">
         <div class="container logo-nav-container">
             <img src="imagenes/logo.jpg" class="logo">
@@ -30,7 +31,9 @@
             </nav>
         </div>
     </header>
+
     <!-- Imagen Header -->
+
     <figure class="img-header">
         <div class="bienvenida">
             <h2><b>"NUEVAS TENDENCIAS TECNOLOGICAS"</b>
@@ -38,7 +41,9 @@
             </h2>
         </div>
     </figure>
+
     <!-- Acerca de nosotros -->
+
     <section class="about-us">
         <div class="info">
             <h3><b>INTRODUCCIÓN</b></h3>
@@ -67,20 +72,9 @@
 
     </div> 
     </section>
-    <!--Agregando scripts-->
-    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
-</body>
-
-
-
-
-
-
-
 
     <!--Pie de página-->
+
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -149,12 +143,11 @@
     </footer>
 
 
+    <!-- SCRIPTS-->
 
-
-<!-- SCRIPTS-->
-<script src="scripts.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
 
 </html>
