modificando pestaña RS

--- a/Redes-Sociales.html
+++ b/Redes-Sociales.html
@@ -53,45 +53,39 @@
     <section class="about-us">
         <div class="info">
             <h3><b>INTRODUCCIÓN</b></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, dolorum ab quia et nesciunt
-                consequuntur, eius, temporibus fugiat natus nam vero. Ipsa aliquid, aspernatur est quibusdam eaque
-                voluptatibus itaque impedit!
-                Sunt voluptatum deleniti porro voluptas quas error! Provident quas eveniet error porro iste officia
-                quidem minima inventore, omnis vel veniam reprehenderit temporibus quos autem nostrum harum placeat,
-                similique eos ab?
-                Rerum deserunt quaerat eum dolore veritatis aut sed consectetur? Nobis soluta, maxime eum voluptatibus
-                similique consequuntur sint asperiores excepturi, reiciendis sequi mollitia quam neque sapiente saepe
-                magni natus. Maxime, veniam.
+            <p>
+                Las redes sociales son estructuras formadas en Internet por personas u organizaciones que se conectan a partir de intereses o valores comunes. A través de ellas, se crean relaciones entre individuos o empresas de forma rápida, sin jerarquía o límites físicos.
             </p>
         </div>
-
         <div class="free-content">
-            <h4><b>Title</b></h4>
+            <h4><b>Personajes Importantes</b></h4>
             <div class="icons">
                 <div>
                     <div class="iconos"><span><i class="fab fa-facebook" id="icono-facebook"></i></span></div>
-                    <h6 id="face">Facebook</h6>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
-                        itaque.</p>
+                    <h6 id="face">CEO Facebook</h6>
+                    <IMG src="imagenes\MarkZuckerberg.jpg" class="personajes">
+                    <p>
+                        Mark Elliot Zuckerberg es un programador y empresario estadounidense, uno de los creadores y fundadores de Facebook
+                    </p>
                 </div>
-
                 <div>
                     <div class="iconos"><span><i class="fab fa-instagram" id="icono-instagram"></i>
                         </span></div>
-                    <h6 id="insta">Instagram</h6>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
-                        itaque.</p>
+                    <h6 id="insta">CEO Instagram</h6>
+                    <IMG src="imagenes/KevinSystrom.jpg" class="personajes">
+                    <p>
+                        Kevin Systrom es un empresario y programador estadounidense, más conocido por ser el cofundador de Instagram junto a Mike Krieger.​
+                    </p>
                 </div>
-
                 <div>
                     <div class="iconos"><span><i class="fab fa-linkedin-in" id="icono-linkedin"></i></i></span></div>
-                    <h6 id="linkedin">Linkedin</h6>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
-                        itaque.</p>
+                    <h6 id="linkedin">CEO Linkedin</h6>
+                    <IMG src="imagenes/RyanRoslansky.jpg" class="personajes">
+                    <p>
+                        Ryan Roslansky es un empresario estadounidense. Es el director ejecutivo de LinkedIn, un sitio web de redes sociales relacionado con los negocios
+                    </p>
                 </div>
-
             </div>
-
         </div>
     </section>
 
@@ -100,6 +94,9 @@
     <section class="estructura">
         <div class="toggle"></div>
         <div class="container-2">
+            <div class="container-2-titulo">
+                <h4><b>TITULO</b></h4>
+            </div>
             <div class="card">
                 <div class="box">
                     <div class="content">
@@ -109,7 +106,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
                 <div class="box">
                     <div class="content">
@@ -120,7 +116,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="card">
                 <div class="box">
                     <div class="content">
@@ -131,8 +126,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </section>
 
