Agregando informacion sobre las nuevas tendencias

--- a/Tendencias.html
+++ b/Tendencias.html
@@ -51,26 +51,74 @@
             Las tecnologías modernas y las nuevas tecnologías emergentes se representan como una alternativa ante diferentes organizaciones para adecuarlas a sus procesos con la finalidad de mejorar e innovar nuevos productos y servicios. Cada día se generan ideas nuevas que generan un avance en la tecnología desde nuevo software, realidad aumentada, almacenamiento virtual, nuevas formas de ver internet, servicios multimedia, web semántica, dispositivos móviles, medios sociales (twitter, facebook, blogs, etc.). la inclusión de las tecnologías emergentes al entorno empresarial.  
             </p>  
             <div class="free-content">
-                <h4><b>TITULO</b></h4>
+                <h4><b>APLICACIONES Y USO DE LAS NUEVAS TENDENCIAS</b></h4>
                 <div class="icons">
                     <div>
                         <div class="iconos"><span><i class="fas fa-robot" id="icono-html"></i></span></div>
                         <h6 id="html">REALIDAD VIRTUAL Y AUMENTADA</h6>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut    
-                            itaque.</p>
+                        <p>La realidad aumentada mejora las experiencias al agregar componentes virtuales como imágenes digitales, gráficos o sensaciones como una nueva capa de interacción con el mundo real.                       En cambio, la realidad virtual crea su propio mundo, que está completamente generado e impulsado por ordenador.</p>
                     </div>
 
                     <div>
                         <div class="iconos"><span><i class="fas fa-broadcast-tower" id="icono-css"></i></i>
                             </span></div>
                         <h6 id="css">INTERNET DE LAS COSAS</h6>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
-                            itaque.</p>
+                        <p>El concepto de Internet de las cosas es que cualquier dispositivo, además del tradicional ordenador y móvil, 
+                            pueda estar conectado a Internet en cualquier lugar y momento.</p>
                     </div>
 
         </div>
 
     </div> 
+</section>
+
+    <!--Agregando Informacion-->
+
+    <div class="cards">
+        <div class="info">
+        <div>
+            <img src="img/realidad virtual.jpg"/>
+            <h1>REALIDAD VIRTUAL Y AUMENTADA</h1>
+            <p>La realidad aumentada es una tecnología que trata de perfeccionar el mundo real superponiendo o añadiendo capas de información,
+                mediante elementos creados de manera digital sobre el entorno que rodea al usuario.
+            </p>
+        </div>
+        </div>
+        <div>
+            <div class="card">
+                <div class="info2">
+            <img src="img/Internet-de-las-cosas.png">
+            <h1>INTERNET DE LAS COSAS</h1>
+            <p>Es un sistema de dispositivos de computación interrelacionados, máquinas mecánicas y digitales, objetos, 
+                animales o personas que tienen identificadores únicos y la capacidad de transferir datos a través de una red,
+                sin requerir de interacciones humano a humano o humano a computadora.
+            </p> 
+        </div>
+        </div>         
+        </div>
+    </div>   
+
+    <!--Usos y aplicaciones para el ineternet de las cosas y la realidad virtual y aumentada-->
+
+    <section class="container1">
+        <div class="info"
+            <h3><b>USOS Y APLICACIONES PARA EL INTERNET DE LAS COSAS</b></h3>
+            <p>Detrás de todos estos dispositivos tenemos chatbots, 
+                un software que simula la conversación humana a través de la inteligencia artificial y es fundamentalmente utilizado para usos específicos como centros de atención al cliente, 
+                servicios de salud o propósitos lúdicos. Entre algunas aplicaciones tenemos.Los Wearables (relojes,pulseras y gafas inteligentes),
+                sector industrial y manufecturero,ciudades inteligentes (Samrt Cities)y autos conectados a traves de un sistema de vinculacion.
+            </p>
+        </div>
+     <div>
+     </div>
+    <div class="container">
+        <div class="info">
+            <h4>APLICACIONES DESTACADAS EN REALIDAD VIRTUAL Y AUMENTADA</h4>
+            <p>Entre las aplicaciones mas destacadas de ambas tecnologias dentro del sector industrial podemos encontrar. La formación y simulación de entornos críticos,la validación de las tareas realizadas,
+            la sobreimpresión de información,la guia y resolucion de incidencia y la optimización de diseños.
+            </p>
+        </div>
+    </div>
     </section>
 
     <!--Pie de página-->
