Update pestaña RS

--- a/Redes-Sociales.html
+++ b/Redes-Sociales.html
@@ -95,23 +95,23 @@
         <div class="toggle"></div>
         <div class="container-2">
             <div class="container-2-titulo">
-                <h4><b>TITULO</b></h4>
+                <h4><b>Cantidad de usuarios de cada plataforma en el mundo</b></h4>
             </div>
             <div class="card">
                 <div class="box">
                     <div class="content">
-                        <h1>TITULO</h1>
+                        <h1>Facebook</h1>
                     <img src="CSS_Redes_Sociales/img_redes/facebook-interfaz.png" class="imagen" alt="imagen">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, labore eveniet distinctio eum alias, possimus reprehenderit odit dolore, qui necessitatibus officiis.</p>
+                    <p>Posee actualmente alrededor de 2,74 mil millones de usuarios activos en el mundo, según la cantidad de usuarios de social media en los datos anteriores se presenta 4,20 mil millones, en pocas palabras representa el 65,2%.</p>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <div class="content">
-                        <h1>TITULO</h1>
+                        <h1>Instagram</h1>
                     <img src="CSS_Redes_Sociales/img_redes/instagram-interfaz.png" class="imagen" alt="imagen">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, labore eveniet distinctio eum alias, possimus reprehenderit odit dolore, qui necessitatibus officiis.</p>
+                    <p>Posee unos 1.221 millones de usuarios activos en el mundo, creció un 22,1% a diferencia del último año, las personas en promedio invierten unas 10,3 horas por mes. El público que alcanza es entre 51% femenino y 49% masculino.</p>
 
                     </div>
                 </div>
@@ -119,9 +119,9 @@
             <div class="card">
                 <div class="box">
                     <div class="content">
-                        <h1>TITULO</h1>
+                        <h1>LinkedIn</h1>
                     <img src="CSS_Redes_Sociales/img_redes/linkedin-interfaz.png" class="imagen" alt="imagen">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, labore eveniet distinctio eum alias, possimus reprehenderit odit dolore, qui necessitatibus officiis.</p>
+                    <p>Esta red social  orientada a grupos profesionales, también ha tenido un importante crecimiento en el último tiempo y ha evolucionado en los últimos años llegando a tener cerca de 728 millones de usuarios activos en un mes.</p>
 
                     </div>
                 </div>
