primera prueba de los cambios en firebase

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,9 @@
                Estás en el lugar correcto, disfruta de tu recorrido en esta página.<br>
            </p>
        </header>
-  
+    
+    <h1>Prueba del commit en firebase</h1>
+
     <!--Sección de resumenes del contenido-->
 
     <div class="news-cards">
