probando el commit

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
                Te gusta la tecnología y te interesa saber lo que está marcando tendencia en el mundo infomático.<br>
                Estás en el lugar correcto, disfruta de tu recorrido en esta página.<br>
            </p>
+           <h1>CAMBIOS APLICADOS</h1>
        </header>
 
     <!--Sección de resumenes del contenido-->
